--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -28,6 +28,8 @@ jobs:
     - name: Install asv
       run: pip install asv
     
+    - run: asv machine --yes
+    
     - name: Run benchmarks
       run: asv run --environment existing:same --verbose
     
