--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -33,6 +33,9 @@ jobs:
     - name: Run benchmarks
       run: asv run --environment existing:same --verbose
     
-    - name: Publish changes
-      run: asv publish
+     - uses: actions/upload-artifact@v2
+      if: always()
+      with:
+        name: asv-benchmark-results-ubuntu-latest
+        path: .asv/results
     
