try changing directory of artifacts

--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -38,4 +38,10 @@ jobs:
       with:
         name: asv-benchmark-results-ubuntu-latest
         path: .asv/results
+
+    - uses: actions/upload-artifact@v2
+      if: always()
+      with:
+        name: asv-benchmark-results-ubuntu-latest2
+        path: results
     
