--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -32,16 +32,12 @@ jobs:
     
     - name: Run benchmarks
       run: asv run --environment existing:same --verbose
-    
-    - uses: actions/upload-artifact@v2
-      if: always()
-      with:
-        name: asv-benchmark-results-ubuntu-latest
-        path: .asv/results
 
     - uses: actions/upload-artifact@v2
       if: always()
       with:
         name: asv-benchmark-results-ubuntu-latest2
         path: results
+    
+    - run: asv publish
     
