--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -13,6 +13,9 @@ defaults:
   run:
     shell: bash -l {0}
 
+permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
   
 jobs:
   build:
