--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -44,6 +44,11 @@ jobs:
     
     - run: asv publish
 
+    - uses: actions/configure-pages@v1
+    - uses: actions/upload-pages-artifact@v1
+      with:
+        path: html
+
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v1
