--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -28,6 +28,11 @@ jobs:
       with:
         python-version: '3.8' 
     
+    - uses: conda-incubator/setup-miniconda@v2
+      with:
+        auto-activate-base: true
+        activate-environment: ""
+        
     - name: Install asv
       run: pip install asv
     
