--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -49,10 +49,10 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: atharva-2001/tardis-benchmark-test-results
-        path: tbt_results
+        path: ../../tbt_results
 
     - name: Create and push changes
-      working-directory: tbt_results
+      working-directory: ../../tbt_results
       run: |
         git config --global user.email "aryaatharva18@gmail.com"
         git config --global user.name "Atharva Arya"
