--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -53,6 +53,11 @@ jobs:
         repository: atharva-2001/tardis-benchmark-test-results
         path: tbt_results
 
+    - run: tree  ../ -L 4
+    
+    - run: cp -r ../.asv .
+      working-directory: tbt_results
+
     - name: Create and push changes
       working-directory: tbt_results
       run: |
