--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -65,7 +65,7 @@ jobs:
         git config --global user.name "Atharva Arya"
         git add .asv
         git commit -m "test"
-        gh auth login --with-token <<< "${{ secrets.GITHUB_TOKEN }}"
+        gh auth login --with-token <<< "${{ secrets.DEPLOY_PAT }}"
         gh repo view
         git push -u origin HEAD
 
