--- a/.github/workflows/crap_workflow.yml
+++ b/.github/workflows/crap_workflow.yml
@@ -41,6 +41,6 @@ jobs:
         git config --global user.name "Atharva Arya"
         git add .
         git commit -m "test"
-        gh auth login --with-token <<< "${{ secrets.DEPLOY_PAT }}"
+        gh auth login --with-token <<< "${{ secrets.GITHUB_TOKEN }}"
         gh repo view
         git push -u origin HEAD
