--- a/.github/workflows/crap_workflow.yml
+++ b/.github/workflows/crap_workflow.yml
@@ -58,7 +58,7 @@ jobs:
     - name: Pushes to another repository
       uses: cpina/github-action-push-to-another-repository@main
       env:
-        API_TOKEN_GITHUB: ${{ secrets.GITHUB_TOKEN }}
+        API_TOKEN_GITHUB: ${{ secrets.DEPLOY_PAT }}
       with:
         source-directory: '.'
         destination-github-username: atharva-2001
