--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -80,6 +80,8 @@ jobs:
     #     target-branch: main
 
     - uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        token: ${{ secrets.DEPLOY_PAT }}
 
     - uses: actions/upload-artifact@v2
       if: always()
