--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -9,6 +9,7 @@ on:
     branches:
     - '*'
   workflow_dispatch:
+  workflow_call:
     
 
 defaults:
@@ -97,4 +98,23 @@ jobs:
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v1
+      # permissions:
+      #   pages: write      # to deploy to Pages
+      #   id-token: write   # to verify the deployment originates from an appropriate source
+  publish:
+    needs: build
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/configure-pages@v1
+      - uses: actions/upload-pages-artifact@v1
+        with:
+          path: .asv/html
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
     
