--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -84,6 +84,8 @@ jobs:
     - uses: stefanzweifel/git-auto-commit-action@v4
       with:
         token: ${{ secrets.DEPLOY_PAT }}
+        add_options: '-A'
+
 
     # - uses: actions/upload-artifact@v2
     #   if: always()
