--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -100,6 +100,14 @@ jobs:
         target-directory: .asv
         user-email: aryaatharva18@gmail.com
         target-branch: main
+    
+    - name: Post comment
+      uses: peter-evans/create-or-update-comment@v2
+      with:
+        token:  ${{ secrets.DEPLOY_PAT }}
+        issue-number: ${{ github.event.client_payload.pull_request.number }}
+        # edit-mode: replace
+        body-file: asv-output.log  
 
     # - uses: stefanzweifel/git-auto-commit-action@v4
     #   with:
