--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -92,7 +92,7 @@ jobs:
     - name: Pushes to another repository
       uses: cpina/github-action-push-to-another-repository@main
       env:
-        API_TOKEN_GITHUB: ${{ secrets.DEPLOY_PAT }}
+        API_TOKEN_GITHUB: ${{ secrets.DEPLOY_PAT2 }}
       with:
         source-directory: .asv
         destination-github-username: atharva-2001
@@ -104,7 +104,7 @@ jobs:
     - name: Post comment
       uses: peter-evans/create-or-update-comment@v2
       with:
-        token:  ${{ secrets.DEPLOY_PAT }}
+        token:  ${{ secrets.DEPLOY_PAT2 }}
         issue-number: ${{ github.event.client_payload.pull_request.number }}
         # edit-mode: replace
         body-file: asv-output.log  
