--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -42,6 +42,8 @@ jobs:
       run: pip install asv
     
     - run: asv machine --yes
+    
+    - run: git branch
 
     - name: Run benchmarks for last 10 commits if not PR
       if: github.event_name != 'pull_request'
