--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -3,11 +3,9 @@ name: run-benchmarks
 on:
   push:
     branches:
-    - '*'
+    - main
 
   pull_request:
-    branches:
-    - '*'
   workflow_dispatch:
   workflow_call:
     
