--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -54,9 +54,9 @@ jobs:
     - name: Compare HEAD with master if PR
       if: github.event_name == 'pull_request'
       run: |
-        asv continuous --split --show-stderr ${{ github.event.pull_request.base.sha }} ${GITHUB_SHA}  | tee asv-output.log  
-        if grep -q Traceback asv-output.log; then
-        echo "Some benchmarks have errors!"
+        asv continuous --split --show-stderr ${{ github.event.pull_request.base.sha }} ${GITHUB_SHA}  | tee asv-output.log  \
+          | if grep -q Traceback asv-output.log; then
+          | echo "Some benchmarks have errors!"
       
     - run: asv publish
     - run: git status
