--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -54,7 +54,7 @@ jobs:
     - name: Compare HEAD with master if PR
       if: github.event_name == 'pull_request'
       run: |
-        asv continuous --split --show-stderr ${{ github.event.pull_request.base.sha }} ${GITHUB_SHA}  | tee asv-output.log  
+        asv continuous --split --show-stderr --factor 1.5 ${{ github.event.pull_request.base.sha }} ${GITHUB_SHA}  | tee asv-output.log  
         if grep -q Traceback asv-output.log; then 
           echo "Some benchmarks have errors!"
         fi
