--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -55,7 +55,7 @@ jobs:
       if: github.event_name == 'pull_request'
       continue-on-error: true
       run: |
-        asv continuous --split --show-stderr --factor 1.005 ${{ github.event.pull_request.base.sha }} ${GITHUB_SHA}  | tee asv-output.log  
+        asv continuous --show-stderr --factor 1.005 ${{ github.event.pull_request.base.sha }} ${GITHUB_SHA}  | tee asv-output.log  
         if grep -q Traceback asv-output.log; then 
           echo "Some benchmarks have errors!"
         fi
@@ -127,7 +127,7 @@ jobs:
         destination-repository-name: tardis-benchmark-test-results
         target-directory: .asv
         user-email: aryaatharva18@gmail.com
-        target-branch: main
+        target-branch: mains
     
     - run: echo ${{ github.event.client_payload.pull_request.number }}
     
