--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -60,7 +60,7 @@ jobs:
       if: github.event_name == 'pull_request'
       continue-on-error: true
       run: |
-        asv continuous --show-stderr --factor 1.005 ${{ github.event.pull_request.base.sha }} ${GITHUB_SHA}  | tee asv-output.log  
+        asv continuous --show-stderr --factor 1.005 ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }}  | tee asv-output.log  
         if grep -q Traceback asv-output.log; then 
           echo "Some benchmarks have errors!"
         fi
