--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -20,7 +20,7 @@ defaults:
   
 jobs:
   build:
-    if: contains(github.event.label.name, 'run-benchmarks')
+    if: contains(github.event.pull_request.labels.*.name, 'run-benchmarks')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
