--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -86,6 +86,9 @@ jobs:
     
     - run: echo ${{ github.event.client_payload.pull_request.number }}
     
+    - name: Get logs
+      run: echo "LOGS=$(cat asv-output.log)" >> $GITHUB_ENV
+
     - name: Post comment
       if: github.event_name == 'pull_request'
       uses: peter-evans/create-or-update-comment@v2
@@ -93,7 +96,17 @@ jobs:
         token:  ${{ secrets.API_TOKEN_GITHUB }}
         issue-number: ${{ github.event.pull_request.number }}
         # edit-mode: replace
-        body-file: asv-output.log  
+        # body-file: asv-output.log  
+        body: |
+          *\*beep\* \*bop\**
+          Hi human, 
+          I ran benchmarks as you asked comparing master (${{ github.event.pull_request.base.sha }}) and the latest commit (${{ github.event.pull_request.head.sha }}). 
+          Here are the logs produced by ASV.
+          Results can also be downloaded as artifacts. 
+          <details>
+            <summary>ASV Logs</summary>
+            ${{ env.LOGS }}
+          </details>
 
     # - uses: stefanzweifel/git-auto-commit-action@v4
     #   with:
