--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -6,6 +6,10 @@ on:
     - main
 
   pull_request:
+  pull_request_target:
+    branches:
+      - main
+
   workflow_dispatch:
   workflow_call:
     
