--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -6,7 +6,7 @@ on:
     - main
 
   pull_request:
-    types: [labeled]
+    types: [labeled, synchronize]
   pull_request_target:
     branches:
       - main
@@ -25,7 +25,8 @@ defaults:
   
 jobs:
   build:
-    if: contains(github.event.pull_request.labels.*.name, 'run-benchmarks')
+    # if: contains(github.event.pull_request.labels.*.name, 'run-benchmarks')
+    if: "!contains(github.event.head_commit.message, 'bench')"
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
