--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -94,8 +94,9 @@ jobs:
     
     - name: Get logs
       run: |
-        LOGS_CONTENTS=$(cat asv-output.log)
-        echo "LOGS=$LOGS_CONTENTS" >> $GITHUB_ENV
+        LOGS_C=$(<asv-output.log)
+        echo "LOGS=$LOGS_C" >> $GITHUB_ENV
+        # echo "LOGS=$(<asv-output.log)" >> $GITHUB_ENV
 
     - name: Post comment
       if: github.event_name == 'pull_request'
